--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,26 @@ application.windows32
 application.windows64
 application.macosx
 out
+
+# BOSS XTRAS
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# Text Backup Files #
+*.s[a-w][a-z]
+*~
+\#*\#
+.\#*
+
+# OS X Files #
+.DS_Store
+._*
+_*
+.Spotlight*
+.Trashes
+
+# Windows Files #
+Thumbs.db
+ehthumbs.db
+
+# Filenames with special characters
+**/*[\\/\:;*?!'"<>|$º•¶§∞¢£]*
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
